Dev (#3)
* refactor: changed type of the Cutomer fields created/updated from 'Long' to 'Instant'

* refactor: added exception with HTTP Status 304, renamed service method delete to deactivate.
